<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/edtNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="6"
            android:ems="12"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/num1"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edtNo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="9"
            android:ems="12"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/num2"
            android:textStyle="bold"
            tools:ignore="LabelFor" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:layout_alignParentBottom="true" />

</RelativeLayout>